@@ -1,3 +1,9 @@
+2006-08-23  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
+
+	* symtab.c: 
+	Fixed 1532423: allow class redefinition (upgrade) if a version
+	qualifier is specified.
+
 2006-07-25  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
 
 	* configure.ac, mofc.y, symtab.c, symtab.h: 
